--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-qwik-empty-starter",
-  "description": "App with Routing built-in ready to create your app",
+  "name": "recursos-tecnologicos",
+  "description": "recursos-tecnologicos",
   "engines": {
     "node": ">=15.0.0"
   },
