--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "qwik build",
+    "build": "qwik build && vite build -c adapters/express/vite.config.ts",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/express/vite.config.ts",
@@ -19,8 +19,8 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "node server/entry.express",
-    "start": "vite --open --mode ssr",
+    "start": "node server/entry.express",
+    "startx": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
