--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   },
   "private": true,
   "scripts": {
-    "build": "qwik build && vite build -c adapters/express/vite.config.ts",
+    "buildx": "qwik build && vite build -c adapters/express/vite.config.ts",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "build.all": "npm run build && npm run build.server",
+    "build": "qwik build && vite build -c adapters/express/vite.config.ts && npm run build.server",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
