--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "start": "node server/entry.express",
+    "serve": "node server/entry.express",
     "startx": "vite --open --mode ssr",
     "qwik": "qwik"
   },
